Restructured images folder

--- a/src/index.html
+++ b/src/index.html
@@ -168,22 +168,22 @@
                     <img src="/src/images/5x5.png" alt="">
                 </div>
                 <div id="pane-two" class="pane">
-                    <img src="/src/images/5x10.png" alt="">
+                    <img src="/src/images/size-guide/5x5.png" alt="">
                 </div>
                 <div id="pane-three" class="pane">
-                    <img src="/src/images/7.5x10.png" alt="">
+                    <img src="/src/images/size-guide/5x10.png" alt="">
                 </div>
                 <div id="pane-four" class="pane">
-                    <img src="/src/images/10x10.png" alt="">
+                    <img src="/src/images/size-guide/7.5x10.png" alt="">
                 </div>
                 <div id="pane-five" class="pane">
-                    <img src="/src/images/10x15.png" alt="">
+                    <img src="/src/images/size-guide/10x15.png" alt="">
                 </div>
                 <div id="pane-six" class="pane">
-                    <img src="/src/images/10x20.png" alt="">
+                    <img src="/src/images/size-guide/10x20.png" alt="">
                 </div>
                 <div id="pane-seven" class="pane">
-                    <img src="/src/images/10x30.png" alt="">
+                    <img src="/src/images/size-guide/10x30.png" alt="">
                 </div>
             </div>
             <div class="size-guide__tabs">
