Compressed images / changed site theme / layout

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="navbar__bottom">
             <div class="navbar__inner">
-                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                <a href="index.html"><img class="navbar-inner__logo" src="images/box-white.svg"
                         alt="Company Logo"></a>
                 <input class="burger-btn" type="checkbox" id="burger-btn" />
                 <label class="burger-label" for="burger-btn">
@@ -60,7 +60,7 @@
             <div class="card">
                 <a href="house.html">
                     <div class="card__img">
-                        <img src="/src/images/1.jpg" alt="">
+                        <img src="images/services/household.jpg" alt="">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">House Storage</h3>
@@ -72,7 +72,7 @@
             <div class="card">
                 <a href="business.html">
                     <div class="card__img">
-                        <img src="/src/images/1.jpg" alt="">
+                        <img src="images/services/business.jpg" alt="">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Business Storage</h3>
@@ -84,7 +84,7 @@
             <div class="card">
                 <a href="student.html">
                     <div class="card__img">
-                        <img src="/src/images/1.jpg" alt="">
+                        <img src="images/services/student.jpg" alt="">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Student Storage</h3>
@@ -96,7 +96,7 @@
             <div class="card">
                 <a href="packing.html">
                     <div class="card__img">
-                        <img src="/src/images/1.jpg" alt="">
+                        <img src="images/services/packing.jpg" alt="">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Packing Supplies</h3>
@@ -116,28 +116,28 @@
             <div class="item">
                 <h3 class="item__header">1 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="/src/images/computer.svg" alt="">
+                    <img class="item__img" src="images/item-icons/computer.svg" alt="">
                     <p>Complete the enquiry form online</p>
                 </div>
             </div>
             <div class="item">
                 <h3 class="item__header">2 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="/src/images/warehouse.svg" alt="">
+                    <img class="item__img" src="images/item-icons/warehouse.svg" alt="">
                     <p>Come in and view the unit</p>
                 </div>
             </div>
             <div class="item">
                 <h3 class="item__header">3 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="/src/images/contract.svg" alt="">
-                    <p>Complete the agreement</p>
+                    <img class="item__img" src="images/item-icons/contract.svg" alt="">
+                    <p>Complete an agreement</p>
                 </div>
             </div>
             <div class="item">
                 <h3 class="item__header">4 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="/src/images/lorry.svg" alt="">
+                    <img class="item__img" src="images/item-icons/lorry.svg" alt="">
                     <p>Move your stuff in</p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
     <div class="info">
         <div class="info__inner">
             <div class="info__inner__img">
-                <img src="/src/images/1.jpg" alt="">
+                <img src="images/units.jpg" alt="">
             </div>
             <div class="info__inner__text">
                 <h3>A storage company you can trust</h3>
@@ -165,25 +165,25 @@
         <div class="size-guide__inner">
             <div class="size-guide__panes">
                 <div id="pane-one" class="pane pane-active">
-                    <img src="/src/images/5x5.png" alt="">
+                    <img src="images/size-guide/5x5.png" alt="">
                 </div>
                 <div id="pane-two" class="pane">
-                    <img src="/src/images/size-guide/5x5.png" alt="">
+                    <img src="images/size-guide/5x10.png" alt="">
                 </div>
                 <div id="pane-three" class="pane">
-                    <img src="/src/images/size-guide/5x10.png" alt="">
+                    <img src="images/size-guide/7.5x10.png" alt="">
                 </div>
                 <div id="pane-four" class="pane">
-                    <img src="/src/images/size-guide/7.5x10.png" alt="">
+                    <img src="images/size-guide/10x10.png" alt="">
                 </div>
                 <div id="pane-five" class="pane">
-                    <img src="/src/images/size-guide/10x15.png" alt="">
+                    <img src="images/size-guide/10x15.png" alt="">
                 </div>
                 <div id="pane-six" class="pane">
-                    <img src="/src/images/size-guide/10x20.png" alt="">
+                    <img src="images/size-guide/10x20.png" alt="">
                 </div>
                 <div id="pane-seven" class="pane">
-                    <img src="/src/images/size-guide/10x30.png" alt="">
+                    <img src="images/size-guide/10x30.png" alt="">
                 </div>
             </div>
             <div class="size-guide__tabs">
@@ -203,16 +203,16 @@
     <footer class=footer>
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="/src/images/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="/src/images/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="/src/images/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
             </div>
         </div>
         <div class="footer__middle">
