--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -68,16 +68,16 @@
     <footer class="footer">
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="/src/images/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="/src/images/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="/src/images/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
             </div>
         </div>
         <div class="footer__middle">
