--- a/src/house.html
+++ b/src/house.html
@@ -59,7 +59,9 @@
                     access. We have toilets & refreshments on site as well as free parking, free use of trolleys and
                     free wifi access.</p>
             </div>
-            <div class="storage__inner__img"></div>
+            <div class="storage__inner__img">
+                <img src="images/services/household.jpg" alt="" />
+            </div>
         </div>
     </header>
 
@@ -99,7 +101,7 @@
     <div class="flexible">
         <div class="flexible__inner">
             <div class="flexible__inner__img">
-                <img src="/src/images/1.jpg" alt="">
+                <img src="images/units.jpg" alt="">
             </div>
             <div class="flexible__inner__info">
                 <p>With a minimum term from just one week, you can stay as long as you like. Don't feel under pressure
@@ -132,16 +134,16 @@
     <footer class=footer>
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="/src/images/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="/src/images/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="/src/images/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
             </div>
         </div>
         <div class="footer__middle">
