--- a/src/student.html
+++ b/src/student.html
@@ -61,7 +61,9 @@
                     inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
                     voluptatequod!Consequuntur?</p>
             </div>
-            <div class="storage__inner__img"></div>
+            <div class="storage__inner__img">
+                <img src="images/services/student.jpg" alt="" />
+            </div>
         </div>
     </header>
 
@@ -112,7 +114,7 @@
     <div class="flexible">
         <div class="flexible__inner">
             <div class="flexible__inner__img">
-                <img src="/src/images/1.jpg" alt="">
+                <img src="images/units.jpg" alt="">
             </div>
             <div class="flexible__inner__info">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
@@ -147,16 +149,16 @@
     <footer class=footer>
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="/src/images/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="/src/images/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="/src/images/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="/src/images/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
             </div>
         </div>
         <div class="footer__middle">
