Updated size guide / metadata

--- a/src/quote.html
+++ b/src/quote.html
@@ -7,11 +7,32 @@
 <!--<![endif]-->
 
 <head>
+    <!--METADATA-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | Quote</title>
-    <meta name="description" content="">
+    <title>Self Storage Theme | Get A Quote</title>
+    <meta name="author" content="Liam McAllister">
+    <meta name="keywords" content="Storage, Self Storage, Belfast, Garage, Storage Units" />
+    <meta name="description" content="Northern Ireland's leading self storage company.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--OPENGRAPH METADATA-->
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Northern Ireland's leading self storage company.">
+    <meta property="og:url" content="http://www.fakeaddress.com" />
+    <meta property="og:site_name" content="Storage Company" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:type" content="image/jpg">
+    <!--TWITTER METADATA-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:description" content="Northern Ireland's leading self storage company." />
+    <meta property="og:url" content="http://www.fakeaddress.com" />
+    <meta name="twitter:site" content="@storagecompany" />
+    <meta property="og:image" content="" />
+    <meta name="twitter:creator" content="@liammcallister" />
+    <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/styles/css/reset.css">
     <link rel="stylesheet" href="/src/styles/css/styles.css">
