--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,32 @@
 <!--<![endif]-->
 
 <head>
+    <!--METADATA-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Self Storage Theme | Home</title>
-    <meta name="description" content="">
+    <meta name="author" content="Liam McAllister">
+    <meta name="keywords" content="Storage, Self Storage, Belfast, Garage, Storage Units" />
+    <meta name="description" content="Northern Ireland's leading self storage company.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--OPENGRAPH METADATA-->
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Northern Ireland's leading self storage company.">
+    <meta property="og:url" content="http://www.fakeaddress.com" />
+    <meta property="og:site_name" content="Storage Company" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:type" content="image/jpg">
+    <!--TWITTER METADATA-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:title" content="Storage Company | Belfast" />
+    <meta property="og:description" content="Northern Ireland's leading self storage company." />
+    <meta property="og:url" content="http://www.fakeaddress.com" />
+    <meta name="twitter:site" content="@storagecompany" />
+    <meta property="og:image" content="" />
+    <meta name="twitter:creator" content="@liammcallister" />
+    <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/styles/css/reset.css">
     <link rel="stylesheet" href="/src/styles/css/styles.css">
@@ -27,8 +48,7 @@
         </div>
         <div class="navbar__bottom">
             <div class="navbar__inner">
-                <a href="index.html"><img class="navbar-inner__logo" src="images/box-white.svg"
-                        alt="Company Logo"></a>
+                <a href="index.html"><img class="navbar-inner__logo" src="images/box-white.svg" alt="Company Logo"></a>
                 <input class="burger-btn" type="checkbox" id="burger-btn" />
                 <label class="burger-label" for="burger-btn">
                     <span class="bar top"></span>
@@ -166,35 +186,49 @@
             <div class="size-guide__panes">
                 <div id="pane-one" class="pane pane-active">
                     <img src="images/size-guide/5x5.png" alt="">
+                    <h3>25 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
                 <div id="pane-two" class="pane">
                     <img src="images/size-guide/5x10.png" alt="">
+                    <h3>50 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
                 <div id="pane-three" class="pane">
                     <img src="images/size-guide/7.5x10.png" alt="">
+                    <h3>75 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
                 <div id="pane-four" class="pane">
                     <img src="images/size-guide/10x10.png" alt="">
+                    <h3>100 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
                 <div id="pane-five" class="pane">
                     <img src="images/size-guide/10x15.png" alt="">
+                    <h3>115 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
                 <div id="pane-six" class="pane">
                     <img src="images/size-guide/10x20.png" alt="">
+                    <h3>120 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
                 <div id="pane-seven" class="pane">
                     <img src="images/size-guide/10x30.png" alt="">
+                    <h3>130 ft sq</h3>
+                    <p>Some Text</p>
                 </div>
             </div>
             <div class="size-guide__tabs">
-                <ul id="tab-nav">
-                    <li><a href="#tab-one">25 square feet</a></li>
-                    <li><a href="#tab-two">50 square feet</a></li>
-                    <li><a href="#tab-three">75 square feet</a></li>
-                    <li><a href="#tab-four">100 square feet</a></li>
-                    <li><a href="#tab-five">115 square feet</a></li>
-                    <li><a href="#tab-six">120 square feet</a></li>
-                    <li><a href="#tab-seven">130 square feet</a></li>
+                <ul class="tab-nav" id="tab-nav">
+                    <li class="tab-item"><a href="#tab-one">5 X 5</a></li>
+                    <li class="tab-item"><a href="#tab-two">10 X 5</a></li>
+                    <li class="tab-item"><a href="#tab-three">10 X 7.5</a></li>
+                    <li class="tab-item"><a href="#tab-four">10 X 10</a></li>
+                    <li class="tab-item"><a href="#tab-five">10 X 15</a></li>
+                    <li class="tab-item"><a href="#tab-six">10 X 20</a></li>
+                    <li class="tab-item"><a href="#tab-seven">10 X 30</a></li>
                 </ul>
             </div>
         </div>
