--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html lang="en" class="no-js">
 <!--<![endif]-->
 
 <head>
@@ -34,8 +34,8 @@
     <meta name="twitter:creator" content="@liammcallister" />
     <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/styles/css/reset.css">
-    <link rel="stylesheet" href="/src/styles/css/styles.css">
+    <link rel="stylesheet" href="styles/css/reset.css">
+    <link rel="stylesheet" href="styles/css/styles.css">
 </head>
 
 <body class="grid">
@@ -80,7 +80,7 @@
             <div class="card">
                 <a href="house.html">
                     <div class="card__img">
-                        <img src="images/services/household.jpg" alt="">
+                        <img src="images/services/household.jpg" alt="Family reading a book">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">House Storage</h3>
@@ -92,7 +92,7 @@
             <div class="card">
                 <a href="business.html">
                     <div class="card__img">
-                        <img src="images/services/business.jpg" alt="">
+                        <img src="images/services/business.jpg" alt="Woman giving a presentation">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Business Storage</h3>
@@ -104,7 +104,7 @@
             <div class="card">
                 <a href="student.html">
                     <div class="card__img">
-                        <img src="images/services/student.jpg" alt="">
+                        <img src="images/services/student.jpg" alt="Students studying together">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Student Storage</h3>
@@ -116,7 +116,7 @@
             <div class="card">
                 <a href="packing.html">
                     <div class="card__img">
-                        <img src="images/services/packing.jpg" alt="">
+                        <img src="images/services/packing.jpg" alt="Dog in a cardboard box">
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Packing Supplies</h3>
@@ -136,28 +136,28 @@
             <div class="item">
                 <h3 class="item__header">1 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="images/item-icons/computer.svg" alt="">
+                    <img class="item__img" src="images/item-icons/computer.svg" alt="PC monitor">
                     <p>Complete the enquiry form online</p>
                 </div>
             </div>
             <div class="item">
                 <h3 class="item__header">2 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="images/item-icons/warehouse.svg" alt="">
+                    <img class="item__img" src="images/item-icons/warehouse.svg" alt="Warehouse shutter">
                     <p>Come in and view the unit</p>
                 </div>
             </div>
             <div class="item">
                 <h3 class="item__header">3 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="images/item-icons/contract.svg" alt="">
+                    <img class="item__img" src="images/item-icons/contract.svg" alt="Paper licence agreement">
                     <p>Complete an agreement</p>
                 </div>
             </div>
             <div class="item">
                 <h3 class="item__header">4 .</h3>
                 <div class="item__content">
-                    <img class="item__img" src="images/item-icons/lorry.svg" alt="">
+                    <img class="item__img" src="images/item-icons/lorry.svg" alt="Removal lorry">
                     <p>Move your stuff in</p>
                 </div>
             </div>
@@ -167,7 +167,7 @@
     <div class="info">
         <div class="info__inner">
             <div class="info__inner__img">
-                <img src="images/units.jpg" alt="">
+                <img src="images/units.jpg" alt="Row of self storage units">
             </div>
             <div class="info__inner__text">
                 <h3>A storage company you can trust</h3>
@@ -185,43 +185,43 @@
         <div class="size-guide__inner">
             <div class="size-guide__panes">
                 <div id="pane-one" class="pane pane-active">
-                    <img src="images/size-guide/5x5.png" alt="">
+                    <img src="images/size-guide/5x5.png" alt="25 square feet unit">
                     <h3>25 ft sq</h3>
                     <p>Some Text</p>
                 </div>
                 <div id="pane-two" class="pane">
-                    <img src="images/size-guide/5x10.png" alt="">
+                    <img src="images/size-guide/5x10.png" alt="50 square feet unit">
                     <h3>50 ft sq</h3>
                     <p>Some Text</p>
                 </div>
                 <div id="pane-three" class="pane">
-                    <img src="images/size-guide/7.5x10.png" alt="">
+                    <img src="images/size-guide/7.5x10.png" alt="75 square feet unit">
                     <h3>75 ft sq</h3>
                     <p>Some Text</p>
                 </div>
                 <div id="pane-four" class="pane">
-                    <img src="images/size-guide/10x10.png" alt="">
+                    <img src="images/size-guide/10x10.png" alt="100 square feet unit">
                     <h3>100 ft sq</h3>
                     <p>Some Text</p>
                 </div>
                 <div id="pane-five" class="pane">
-                    <img src="images/size-guide/10x15.png" alt="">
+                    <img src="images/size-guide/10x15.png" alt="115 square feet unit">
                     <h3>115 ft sq</h3>
                     <p>Some Text</p>
                 </div>
                 <div id="pane-six" class="pane">
-                    <img src="images/size-guide/10x20.png" alt="">
+                    <img src="images/size-guide/10x20.png" alt="120 square feet unit">
                     <h3>120 ft sq</h3>
                     <p>Some Text</p>
                 </div>
                 <div id="pane-seven" class="pane">
-                    <img src="images/size-guide/10x30.png" alt="">
+                    <img src="images/size-guide/10x30.png" alt="130 square feet unit">
                     <h3>130 ft sq</h3>
                     <p>Some Text</p>
                 </div>
             </div>
             <div class="size-guide__tabs">
-                <ul class="tab-nav" id="tab-nav">
+                <ul id="tab-nav" class="tab-nav">
                     <li class="tab-item"><a href="#tab-one">5 X 5</a></li>
                     <li class="tab-item"><a href="#tab-two">10 X 5</a></li>
                     <li class="tab-item"><a href="#tab-three">10 X 7.5</a></li>
@@ -237,16 +237,16 @@
     <footer class=footer>
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt="Facebook icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt="Twitter icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt="Youtube icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt="Google icon"></a>
             </div>
         </div>
         <div class="footer__middle">
@@ -287,7 +287,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="/src/scripts/app.js" async defer></script>
+    <script src="scripts/app.js" async defer></script>
 </body>
 
 </html>
