--- a/src/packing.html
+++ b/src/packing.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html lang="en" class="no-js">
 <!--<![endif]-->
 
 <head>
@@ -71,7 +71,7 @@
         <div class="packing__inner">
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/small.jpg" alt="Small box">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Small Box</h3>
@@ -80,7 +80,7 @@
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/medium.jpg" alt="Medium box">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Medium Box</h3>
@@ -89,7 +89,7 @@
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/large.jpg" alt="Large box">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Large Box</h3>
@@ -98,7 +98,7 @@
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/tape.jpg" alt="Packing tape">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Tape</h3>
@@ -107,7 +107,7 @@
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/padlock.jpg" alt="Padlock">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Padlock</h3>
@@ -116,7 +116,7 @@
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/sofa.jpg" alt="Sofa cover">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Sofa Cover</h3>
@@ -125,16 +125,16 @@
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/mattress.jpg" alt="Mattress cover">
                 </div>
                 <div class="card__caption">
-                    <h3 class="card__caption__header">Matress Cover</h3>
+                    <h3 class="card__caption__header">Mattress Cover</h3>
                     <p class="card__caption__text">£4.00 each</p>
                 </div>
             </div>
             <div class="card card--packing">
                 <div class="card__img">
-                    <img src="/src/images/1.jpg" alt="">
+                    <img src="images/packing-supplies/bubblewrap.jpg" alt="Bubblewrap">
                 </div>
                 <div class="card__caption">
                     <h3 class="card__caption__header">Bubblewrap (5 meters)</h3>
@@ -147,16 +147,16 @@
     <footer class=footer>
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt="Facebook icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt="Twitter icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt="Youtube icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt="Google icon"></a>
             </div>
         </div>
         <div class="footer__middle">
