--- a/src/checklist.html
+++ b/src/checklist.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html lang="en" class="no-js">
 <!--<![endif]-->
 
 <head>
@@ -235,16 +235,16 @@
     <footer class="footer">
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt="Facebook icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt="Twitter icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt="Youtube icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt="Google icon"></a>
             </div>
         </div>
         <div class="footer__middle">
