--- a/src/house.html
+++ b/src/house.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html lang="en" class="no-js">
 <!--<![endif]-->
 
 <head>
@@ -81,7 +81,7 @@
                     free wifi access.</p>
             </div>
             <div class="storage__inner__img">
-                <img src="images/services/household.jpg" alt="" />
+                <img src="images/services/household.jpg" alt="Family reading a book" />
             </div>
         </div>
     </header>
@@ -107,10 +107,7 @@
 
     <div class="access">
         <h3>Pop In, Anytime</h3>
-        <p>
-            <p>You can access your unit at any time, day or night, 7 days a week using the FOB provided upon sign up.
-            </p>
-        </p>
+        <p>You can access your unit at any time, day or night, 7 days a week using the FOB provided upon sign up.</p>
         <p>Office Opening Hours:</p>
         <ul>
             <li>Mon to Fri 8.30am to 6pm</li>
@@ -122,7 +119,7 @@
     <div class="flexible">
         <div class="flexible__inner">
             <div class="flexible__inner__img">
-                <img src="images/units.jpg" alt="">
+                <img src="images/units.jpg" alt="Row of self storage units">
             </div>
             <div class="flexible__inner__info">
                 <p>With a minimum term from just one week, you can stay as long as you like. Don't feel under pressure
@@ -155,16 +152,16 @@
     <footer class=footer>
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt="Facebook icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt="Twitter icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt="Youtube icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt="Google icon"></a>
             </div>
         </div>
         <div class="footer__middle">
