--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -6,7 +6,7 @@
 <html class="no-js">
 <!--<![endif]-->
 
-<head>
+<head lang="en">
     <!--METADATA-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,16 +89,16 @@
     <footer class="footer">
         <div class="footer__top">
             <div class="footer__top__left">
-                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
                 <span>028 90 111 111</span>
-                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="">
+                <img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
                 <span>info@company.com</span>
             </div>
             <div class="footer__top__right">
-                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/facebook.svg" alt="Facebook icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/twitter.svg" alt="Twitter icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/youtube.svg" alt="Youtube icon"></a>
+                <a href="#"><img class="footer__top-icon" src="images/social/google.svg" alt="Google icon"></a>
             </div>
         </div>
         <div class="footer__middle">
