Finished size guide

--- a/src/index.html
+++ b/src/index.html
@@ -184,45 +184,45 @@
     <div class="size-guide">
         <div class="size-guide__inner">
             <div class="size-guide__panes">
-                <div id="pane-one" class="pane pane-active">
+                <div id="tab-one" class="pane pane-active">
                     <img src="images/size-guide/5x5.png" alt="25 square feet unit">
                     <h3>25 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>Small closet</p>
                 </div>
-                <div id="pane-two" class="pane">
+                <div id="tab-two" class="pane">
                     <img src="images/size-guide/5x10.png" alt="50 square feet unit">
                     <h3>50 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>1 bedroom property</p>
                 </div>
-                <div id="pane-three" class="pane">
+                <div id="tab-three" class="pane">
                     <img src="images/size-guide/7.5x10.png" alt="75 square feet unit">
                     <h3>75 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>2 bedroom property</p>
                 </div>
-                <div id="pane-four" class="pane">
+                <div id="tab-four" class="pane">
                     <img src="images/size-guide/10x10.png" alt="100 square feet unit">
                     <h3>100 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>3 bedroom property</p>
                 </div>
-                <div id="pane-five" class="pane">
+                <div id="tab-five" class="pane">
                     <img src="images/size-guide/10x15.png" alt="115 square feet unit">
                     <h3>115 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>3 to 4 bedroom property</p>
                 </div>
-                <div id="pane-six" class="pane">
+                <div id="tab-six" class="pane">
                     <img src="images/size-guide/10x20.png" alt="120 square feet unit">
                     <h3>120 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>4 bedroom property</p>
                 </div>
-                <div id="pane-seven" class="pane">
+                <div id="tab-seven" class="pane">
                     <img src="images/size-guide/10x30.png" alt="130 square feet unit">
                     <h3>130 ft sq</h3>
-                    <p>Some Text</p>
+                    <p>4 &plus; bedroom property</p>
                 </div>
             </div>
             <div class="size-guide__tabs">
                 <ul id="tab-nav" class="tab-nav">
-                    <li class="tab-item"><a href="#tab-one">5 X 5</a></li>
+                    <li class="tab-item pane-active"><a href="#tab-one">5 X 5</a></li>
                     <li class="tab-item"><a href="#tab-two">10 X 5</a></li>
                     <li class="tab-item"><a href="#tab-three">10 X 7.5</a></li>
                     <li class="tab-item"><a href="#tab-four">10 X 10</a></li>
