--- a/src/quote.html
+++ b/src/quote.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="quote-form">
-            <form>
+            <form action="post">
                 <div class="quote-form__inner">
                     <div class="left">
                         <label for="firstName">* First Name:</label>
