--- a/src/contact.html
+++ b/src/contact.html
@@ -69,12 +69,12 @@
 
     <div class="contact">
         <div class="contact__inner">
-            <div class="contact-header">
+            <div class="contact__inner-header">
                 <h1>Contact Us</h1>
                 <small>* Required Field</small>
             </div>
-            <div class="contact-form">
-                <form action="post">
+            <div class="contact__inner-form">
+                <form class="contact-form">
                     <label for="contact-name">Name *</label>
                     <input id="contact-name" type="text" minlength="3" maxlength="20" required />
 
@@ -84,15 +84,20 @@
                     <label for="contact-phone">Phone * (11 digits)</label>
                     <input id="contact-phone" type="tel" pattern="[0-9]{11}" required />
 
-                    <label for="contact-message">Message *</label>
-                    <textarea name="contact-message" id="contact-message" cols="30" rows="10" required></textarea>
+                    <textarea name="contact-message" id="contact-message" cols="30" rows="10" placeholder="Message" required></textarea>
 
                     <button class="btn" type="submit">Submit</button>
                 </form>
             </div>
-            <div class="contact-info">
-                <p>02890111111</p>
-                <p>info@company.com</p>
+            <div class="contact__inner-info">
+                <ul>
+                    <li><img class="footer__top-icon" src="images/custom-icons/phone.svg" alt="Phone icon">
+                        <span>028 90 111 111</span>
+                    </li>
+                    <li><img class="footer__top-icon" src="images/custom-icons/email.svg" alt="Email Icon">
+                        <span>info@company.com</span></li>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
