Commented js files / Created table of contents for scss

--- a/src/faq.html
+++ b/src/faq.html
@@ -73,8 +73,7 @@
             <ul id="accordian" class="accordian">
                 <li class="question">What is self storage?</li>
                 <li class="answer">Self storage is shorthand for ‘self-service storage’. It can mean any space – such as
-                    a
-                    room, locker or unit – that you can rent on a short or long-term basis to securely store your
+                    a room, locker or unit – that you can rent on a short or long-term basis to securely store your
                     possessions in.</li>
                 <li class="question">How do I pay for my storage?</li>
                 <li class="answer">We offer a number of payment options – you can spread the cost with a monthly Direct
