Added a cookie policy / Updated layout

--- a/src/checklist.html
+++ b/src/checklist.html
@@ -69,7 +69,7 @@
 
     <div class="checklist">
         <div class="checklist__inner">
-            <h1>Storage Checklist</h1>
+            <h1 class="checklist-header">Storage Checklist</h1>
             <p>If you're downsizing your home or if you just want to declutter you may be in need of a self-storage
                 unit. Follow our checklist to learn more about your options such as full-service storage vs.
                 self-storage, figuring out how much space you need, considering insurance, and how to optimize the
