--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
     <meta name="twitter:creator" content="@liammcallister" />
     <!--STYLESHEETS-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/styles/css/reset.css">
-    <link rel="stylesheet" href="/src/styles/css/styles.css">
+    <link rel="stylesheet" href="styles/css/reset.css">
+    <link rel="stylesheet" href="styles/css/styles.css">
 </head>
 
 <body class="grid">
